<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="horizontal"
    android:weightSum="4">

    <TextView
        android:id="@+id/tv_picture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:drawablePadding="10dp"
        android:drawableTop="@drawable/btn_chat_add_picture_selector"
        android:gravity="center"
        android:text="@string/picture"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:drawablePadding="10dp"
        android:drawableTop="@drawable/btn_chat_add_camera_selector"
        android:gravity="center"
        android:text="@string/camera"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:drawablePadding="10dp"
        android:drawableTop="@drawable/btn_chat_add_location_selector"
        android:gravity="center"
        android:text="@string/location"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_video"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:drawablePadding="10dp"
        android:drawableTop="@drawable/btn_chat_add_video_selector"
        android:gravity="center"
        android:text="视频"
        android:textSize="14sp" />

</LinearLayout>
