<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/common_bg"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_gravity="center"
        android:background="@color/appcolor">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/hotchat"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </RelativeLayout>


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/sw_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="30dp"
                android:background="@color/line"/>

            <LinearLayout
                android:id="@+id/chatcount"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/btn"
                android:padding="4dp">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/mxm"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="消息"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tv_unreadAllmessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_count_new_message_main1"
                    android:gravity="right"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="1"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>

            </LinearLayout>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="30dp"
                android:background="#E4E2E3"/>


            <LinearLayout
                android:id="@+id/startcp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/btn"
                android:padding="2dp">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/nfe"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="碰碰"
                    android:textColor="#000"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="0Y币"
                    android:textColor="#686868"
                    android:textSize="16sp"
                    android:visibility="gone"/>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="54dp"
                android:background="#E4E2E3"/>

            <LinearLayout
                android:id="@+id/startcg"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/btn"
                android:padding="2dp">

                <ImageView
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/icon_chat_room_tools_start_dice_normal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="竞猜"
                    android:textColor="#000"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tv_g"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="0辣条"
                    android:textColor="#686868"
                    android:textSize="16sp"/>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="54dp"
                android:background="#E4E2E3"/>

            <LinearLayout
                android:id="@+id/linear_lol"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn"
                android:padding="2dp">

                <ImageView
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/ic_invite_friend_grow"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/LOL"
                    android:textColor="#000"
                    android:textSize="16sp"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linear_king"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/btn"
                android:padding="2dp"
                android:visibility="gone">

                <ImageView
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/ic_limit_win_challenge"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/king"
                    android:textColor="#000"
                    android:textSize="16sp"/>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="54dp"
                android:background="#E4E2E3"/>

            <LinearLayout
                android:id="@+id/Linear_video"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/btn"
                android:padding="2dp">

                <ImageView
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/ic_record_media_play_normal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/video"
                    android:textColor="#000"
                    android:textSize="16sp"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>